# Training

./: README.md
C games Course Projects/: CMakeLists.txt  README.md
C games Course Projects/CounterStrike/: CMakeLists.txt
C games Course Projects/CounterStrike/include/: BattleField.h  CheckInput.h  Player.h
C games Course Projects/CounterStrike/src/: CheckInput.c  Pistol.c  PistolUtilities.c  VitalData.c  main.c
C games Course Projects/StarCraft/: CMakeLists.txt
C games Course Projects/StarCraft/include/: BATTLE.h  RaceUtilities.h  Vector.h
C games Course Projects/StarCraft/include/CurrentAttackingUnitsH/: CurrentAttackingBattleCruiser.h  CurrentAttackingCarrier.h  CurrentAttackingMutalisk.h  CurrentAttackingPhoenix.h
C games Course Projects/StarCraft/include/FuncPointersForAttacksInvokeH/: FunctionsPtrAttackingUnits.h
C games Course Projects/StarCraft/include/UnitTypesStructuresH/: TerranUnitType.h  ZergUnitType.h
C games Course Projects/StarCraft/include/WarUnitsH/: BattleCruser.h  Carrier.h
C games Course Projects/StarCraft/src/: CheckInput.c  ErrorHandler.c  Utility.c  Vector.c  printWinnerTeamRace.c
C games Course Projects/StarCraft/src/CurrentAttackingUnitsC/: CurrentAttackingBattleCruiser.c  CurrentAttackingCarrier.c  CurrentAttackingMutalisk.c  CurrentAttackingPhoenix.c
C games Course Projects/StarCraft/src/FuncPointersForAttacksInvokeC/: FunctionsPtrAttackingUnits.c
C games Course Projects/StarCraft/src/FuncPointersForDefenceInvokeC/: FunctionsPtrDamageReceiveUnits.c
C games Course Projects/StarCraft/src/WarUnitsC/: Phoenix.c  Viking.c
C games Course Projects/WarCraft/: CMakeLists.txt
C games Course Projects/WarCraft/include/: BattleField.h  BattleProcessor.h  ErrorHandler.h  Utilities.h
C games Course Projects/WarCraft/include/UndeadRace/: ClassDeathKnight.h
C games Course Projects/WarCraft/src/: BattleField.c  BattleProcessor.c  CheckInput.c  ClassHero.c  ErrorHandler.c  Vector.c  main.c
C games Course Projects/WarCraft/src/HumanRace/: ClassArchMage.c  ClassPaladin.c
C games Course Projects/WarCraft/src/UndeadRace/: ClassDeathKnight.c  ClassDrawRanger.c
C games Course Projects/cmake_helpers/: helpers_c.cmake
Programming in C/Homework 03.10/: 03.10-1.c  2.c  3.c  6.c  8  8.c
Programming in C/Homework 07.09.2022/: zadacha1.c  zadacha10.c  zadacha11.c  zadacha12.c  zadacha2.c  zadacha3.c  zadacha4.c  zadacha5.c  zadacha6.c  zadacha7.c  zadacha8.c
Programming in C/Homework 07.10/: 1  1.c  2  2.c  5  5.c
Programming in C/Homework 10.10/: 1  1.c  10.10-7.c  10.h  2  2.c  3  3.c  4  4.c  5  5.c  6  6.c
Programming in C/Homework 12.09/: zadacha1.c  zadacha10.c  zadacha11.c  zadacha2.c  zadacha3.c  zadacha4.c  zadacha5.c  zadacha7.c  zadacha8.c  zadacha9.c  zadahca6.c
Programming in C/Homework 12.10/: 1.c  2.c  3.c
Programming in C/Homework 14.09/: 1.c  10.c  10.h  2.c  3.c  4.c  5.c  6.c  7.c  8-f.c  8-f.h  8.c  9.c  9.h  zadacha11.c
Programming in C/Homework 14.10/: 1-2.c
Programming in C/Homework 16.09/: 1.c  2.c  3.c  4.c  5.c  6.c  7.c  8.c  9.c
Programming in C/Homework 19.09/: 10.c  11.c  12.c  13.c  14.c
Programming in C/Homework 19.10/: 1.c  Dinq.c
Programming in C/Homework 21.09/: 1.c  2-3.c  4.c  5-6.c  7.c  8.c  9.c
Programming in C/Homework 23.09/: 1.c  2.c  3.c  4.c  5.c  6.c  7.c  8.c
Programming in C/Homework 26.09/: 1.c  2.c  3.c  4.c  5.c  6.c  7.c
Programming in C/Homework 28.09/: 1.c  10.c  11.c  12.c  13.c  14.c  15.c  16.c  2.c  3.c  4.c  5.c  6.c  7.c  8.c  9.c
Programming in C/Homework 30.09/: 1-2.c  3.c  4.c
Programming in C/Previous Homeworks/: Zadacha 10.c  Zadacha 11.c  Zadacha12.c  zadacha13.c
Programming in C/Project in C/: first_project_functions.c  first_project_functions.h  main.c
Programming in Python/05_01_Lecture/: homework.py
Programming in Python/07_12_Lecture/: lecture.py  zadachi2.py
Programming in Python/08_01_Lecture/: decorator.py  task.py
Programming in Python/13_12_Lecture/: Lecture.py
Programming in Python/15_01_Lecture/: task1.py  task2.py
Programming in Python/18_01_Lecture/: homework.txt
Programming in Python/20_12_Lecture/: Lecture.py
Programming in Python/29_11_PythonLecture/: 29_11_LectureExample.py
Programming in Python/30_11_Lecture/: lecture.py  tests.py
Programming in Python/CarSimulator/: main.py
Programming in Python/Web_Scrapper_Xmas_HW/: main.py
Programming in Python/control_flow/: example_csv.csv  example_new.csv  for_loop.py  homework.py  if_statements.py  mini_while.py  syntax.py  test_with_statement.txt  try_except.py  while_loop.py  with_statement.py
Programming in Python/data_types/: excersice.py  homework.py  python_data_model.py
Programming in Python/example_project/: README_example_projects.md  main.py  requirements.dev.txt
Programming in Python/functions_decorators_generators/: decorators.py  (+7 more)
S04-Samurai-Jack-main/: README.md
Web Scraper Course Project/: README.md  json_func  main.py  requirements.txt
(+156 files in other folders)
